# web-kanban

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_items.py  0002_teams_team_members.py  (+22 more)
backend/app/: audit.py  auth.py  backup.py  config.py  crypto.py  csv_import.py  db.py  ldap_auth.py  ldap_settings.py  links.py  main.py  models.py  pi_objectives.py  request_logging.py  scheduler.py  schemas.py  snapshots.py  timeutil.py  wsjf.py
backend/tests/: conftest.py  import_helpers.py  test_api_audit.py  test_api_auth.py  test_api_board.py  test_api_boards.py  test_api_capacities.py  test_api_comments.py  test_api_containers.py  test_api_departments.py  test_api_feature_ranking.py  test_api_item_department.py  test_api_items.py  test_api_lane_order.py  test_api_lanes.py  test_api_links.py  test_api_planning_intervals.py  test_api_renames.py  test_api_team_members.py  test_api_teams.py  test_api_users.py  test_audit_auth_users.py  test_audit_core.py  test_audit_items.py  test_audit_links_import.py  test_audit_masters.py  test_auth_core.py  test_auth_models.py  test_authz.py  test_backup_config_api.py  test_backup_models.py  test_backup_run.py  test_backup_run_api.py  test_board_models.py  test_bootstrap.py  test_comment_model.py  test_crypto.py  test_csv_helpers.py  test_csv_parse.py  test_department_models.py  (+25 more)
(+240 files in other folders)
